# ResoLute

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  export_web.sh  railway.toml  set_railway_env.sh
agent/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
agent/src/resolute/: __init__.py  __main__.py  config.py  context.py  llm.py  tracing.py
agent/src/resolute/agent/: __init__.py  mentor.py  prompts.py  tools.py
agent/src/resolute/client/: __init__.py  text.py
agent/src/resolute/core/: __init__.py  result.py
agent/src/resolute/db/: __init__.py  models.py  seed_data.py  session.py
agent/src/resolute/db/repositories/: __init__.py  exercise.py  player.py  progress.py  world.py
agent/src/resolute/game/: __init__.py  exercise_timer.py  rewards.py  state_manager.py  sync_state_manager.py  world_generator.py
agent/src/resolute/game/services/: __init__.py  exercise.py  player.py  quest.py  world.py
agent/src/resolute/server/: __init__.py  app.py  handlers.py  messages.py
agent/tests/: __init__.py  conftest.py  test_mentor.py  test_server.py  test_tracing.py
ui/: bartender.gd  bartender.gd.uid  bartender.tscn  export_presets.cfg  farmer.tscn  game_level.tscn  icon.svg.import  landing_screen.gd  landing_screen.gd.uid  landing_screen.tscn  location_screen.gd  location_screen.gd.uid  location_screen.tscn  login_screen.gd  login_screen.gd.uid  login_screen.tscn  lumberjack.tscn  miner.tscn  npc.gd  player.gd  player.gd.uid  player.tscn  project.godot  resolute_logo.png.import  round-table.tscn  stage.tscn  table.tscn  tavern.gd  tavern.gd.uid  (+5 more)
(+86 files in other folders)
