[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolute"
version = "0.1.0"
description = "ResoLute - Music-learning adventure game backend"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",

    # Observability
    "opik>=1.0.0",

    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",

    # Config
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resolute"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
server = "uvicorn resolute.server.app:app --host 0.0.0.0 --port 8000 --reload"
client = "python -m resolute client {args}"
test = "pytest {args}"
lint = "ruff check src tests"
format = "ruff format src tests"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
